# Chess-AI

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
documentation/: implementation_document.md  project_specification.md  testing_document.md
documentation/weekly_reports/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
src/: board.py  constants.py  engine.py  game.py  main.py  test.py
src/tests/: game_test.py
