[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Nicolas <kivimakinicolas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"
coverage = "^7.1.0"
invoke = "^2.0.0"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
